src/style/sections/_projects.scss
#projects {
  color: $dark-blue-text;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  background-size: cover;
  background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg") center;
  padding-bottom: 3rem;


  @media (max-width: 1000px) {
    #projects {
      background-size: 100% 100%; /* Adjust for landscape orientation */
    }
  }
  @include respond(tab-land) {
    padding-top: 5rem;
  }

  .carousel-wrapper {
    width: 100%;
    height: 100%;
  }

  .project-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    margin: auto;
    padding-left: 0;
    padding-right: 7%;

    @include respond(phone) {
      margin-bottom: 0;
      padding: 1rem;
    }
    @media (max-width: 1000px) {
      max-width: 100%;
      height: auto;
      padding-right: 0;
    }
  }
}

.sproject {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "title title"
    "image text"
    "icons icons"
    "buttons buttons";
  gap: 20px;
  align-items: start;
  justify-content: center; /* Aligns the grid horizontally in the center */
  margin: auto; /* Centers the grid block in the available horizontal space */
  max-width: 80%; /* Set a max-width for larger screens */



  @media (max-width: 1000px) and (orientation: landscape) {
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
      "title title"
      "image text"
      "icons buttons";
    max-width: 600px;
    gap: 10px;


    .project-buttons a {
      font-size: smaller;
      padding: 5px 10px;
      @media (max-width: 1000px) and (orientation: landscape) {
        padding: 2px 10px;
      }
    }
  }
  @media (max-width: 1000px) and (orientation: portrait) {
    grid-template-columns: 1fr;
    grid-template-areas:
      "title title"
      "image image"
      "text text"
      "icons icons"
      "buttons buttons";
    max-width: 80%;
  }

}

.project-icons {
  grid-area: icons;
  display: flex;
  justify-content: center; // Centers the icons horizontally
  align-items: center; // Aligns the icons vertically
  gap: 30px; // Spacing between icons
  padding: 10px 0; // Padding above and below the icon list
  width: fit-content; // Restricts the width to its content
  margin: auto; // Centers the container in the grid area
  @media (max-width: 1000px)  {
    gap: 15px;
    padding: 5px 0;
  }
}

.icon-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;

  .project-icon {
    width: 100px; // Smaller width
    height: 100px; // Ensuring the height is the same as the width
    object-fit: contain; // Keeps the image aspect ratio
    transition: box-shadow 0.3s ease; // Smooth transition for the glow effect
    @media (max-width: 1000px)  {
      width: 45px;
      height: 45px;
    }
  }

  .icon-text {
    position: absolute;
    bottom: -20px; // Adjust as needed
    left: 50%;
    transform: translateX(-50%);
    white-space: nowrap;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s, visibility 0.3s;
    font-size: 15px;
    @media (max-width: 1000px) {
      font-size: 8px;
      bottom: -10px;
    }
  }

  &:hover .icon-text {
    opacity: 1;
    visibility: visible;
  }
  &:hover .project-icon {
    filter: drop-shadow(1px 1px 10px #b07219) brightness(1);
  }
}

.project-wrapper__text-title {
  font-size: 2.2rem; // Even larger font size
  font-weight: 550; // Heavier font weight for more boldness
}
.custom-arrow {
  background: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
  color: transparent; /* Since the background is the focus */
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  border: 2px solid;
  border-image-slice: 1;
  font-size: 30px; /* Adjust size as needed */
  cursor: pointer;
  z-index: 20;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding: 10px;
}

.custom-arrow:hover {
  /* Adjust hover effect as desired, maybe a slight change in gradient or opacity */
  opacity: 0.8;
}

.custom-arrow-left {
  left: 10px;
}

.custom-arrow-right {
  right: 10px;
}


.project-title {
  grid-area: title;
  text-align: center;
  color: $dark-blue-text;
  font-size: 30px;
  @media (max-width: 1000px) {
    font-size: 20px;
  }
}

.project-text {
  grid-area: text;
  width: 100%;
  padding: 10px;
  @media (max-width: 1000px)  {
    padding: 5px;
  }
}

.project-image {
  grid-area: image;
  width: 100%;
  height: auto;
  max-height: 600px;
  object-fit: cover;
  border-radius: 15px;
  transition: transform 0.3s ease;

  &:hover {
    transform: scale(1.05);
  }
}

.project-buttons {
  grid-area: buttons;
  display: flex;
  justify-content: center;
  gap: 10px;
  padding-top: 20px;
}

.project-buttons button {
  cursor: not-allowed;
  background-color: transparent;
  color: #b4b3b3;
  padding: 10px 15px;
  font-size: 16px;
  border-radius: 5px;
  text-decoration: none;
  display: inline-block;
  border: none;
  position: relative;
}

.project-buttons button:hover {
  color: #a10202;
}

.project-description {
  font-size: 1.8rem;
  line-height: 1.5;
  margin-top: 10px;
  margin-bottom: 20px;
  padding: 10px;
  border-radius: 8px;
    @media (max-width: 1000px){
      font-size: 1.5rem;
    }
}

.column {
  width: 100%;
  padding: 10px;
}

.columnBottom {
  display: flex;
  align-items: center;
  justify-content: center;
}

.photobanner .sproject {
  margin: 0 0.5em;
}

.photobanner {
  position: absolute;
  left: 0;
  white-space: nowrap;
  animation: bannermove 5s linear infinite;
  height: 500px;
  width: auto;

  &:hover {
    -webkit-animation-play-state: paused;
    -moz-animation-play-state: paused;
    -o-animation-play-state: paused;
    animation-play-state: paused;
  }
}

@keyframes bannermove {
  0% {
    transform: translate(0, 0);
  }
  100% {
    transform: translate(-50%, 0);
  }
}

